syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/dietzy1/chatapp/protos/user/v1;user_v1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {get: "/v1/user/{user_id}"};
  }

  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {get: "/v1/users/{chatroom_id}"};
  }

  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {
    option (google.api.http) = {post: "/v1/user/verify"};
  }
}

message User {
  string user_id = 1;
  string username = 2;
  string icon_src = 3;
  string description = 4;
  string join_date = 5;
  bool verified = 6;
}

message CreateUserRequest {
  string username = 1;
  string icon_src = 2;
}

//And a token
message CreateUserResponse {
  string user_id = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  string chatroom_id = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message VerifyUserRequest {
  string user_id = 1;
  string password = 2;
}

message VerifyUserResponse {
}